unpackaged/main/default/objects/Project_Backlog_Reporting_Snapshot__c/Project_Backlog_Reporting_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Project Backlog Reporting Snapshot. This Object captures the data from the Project &amp; Opp fields. To be only used for Reporting. ** NO AUTOMATION TO BE BUILD ON THIS**</description>
    <label>Project Backlog Reporting Snapshot</label>
    <nameField>
        <label>Project Backlog Reporting Snapshot</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Backlog Reporting Snapshot</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>