unpackaged/main/default/objects/Project_Backlog_Reporting_Snapshot__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <label>Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>