unpackaged/main/default/objects/Project_Backlog_Reporting_Snapshot__c/fields/Accounting_Report_Data_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Report_Data_Uploaded__c</fullName>
    <label>Accounting Report Data Uploaded</label>
    <type>Date</type>
</CustomField>