unpackaged/main/default/objects/Project_Backlog_Reporting_Snapshot__c/fields/Billings__c.field-meta.xml
<CustomField>
    <fullName>Billings__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <label>Billings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>