unpackaged/main/default/objects/Project_Backlog_Reporting_Snapshot__c/fields/Deferred_Report_Amount__c.field-meta.xml
<CustomField>
    <fullName>Deferred_Report_Amount__c</fullName>
    <label>Deferred Report Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>