unpackaged/main/default/objects/Project_Backlog_Reporting_Snapshot__c/fields/Disagg_Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Disagg_Report_Date__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <label>Disagg Report Date</label>
    <type>Date</type>
</CustomField>