unpackaged/main/default/objects/Project_Backlog_Reporting_Snapshot__c/fields/Expiring_Comment__c.field-meta.xml
<CustomField>
    <fullName>Expiring_Comment__c</fullName>
    <label>Expiring Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>