unpackaged/main/default/objects/Project_Backlog_Reporting_Snapshot__c/fields/Install_Report_Amount__c.field-meta.xml
<CustomField>
    <fullName>Install_Report_Amount__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <label>Install Report Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>