unpackaged/main/default/objects/Project_Backlog_Reporting_Snapshot__c/fields/Install_Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Install_Report_Date__c</fullName>
    <label>Install Report Date</label>
    <type>Date</type>
</CustomField>