unpackaged/main/default/objects/Project_Backlog_Reporting_Snapshot__c/fields/Margin_1__c.field-meta.xml
<CustomField>
    <fullName>Margin_1__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <label>Margin %</label>
    <length>255</length>
    <type>Text</type>
</CustomField>