unpackaged/main/default/objects/Project_Backlog_Reporting_Snapshot__c/fields/Opportunity_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Close_Date__c</fullName>
    <label>Opportunity: Close Date</label>
    <type>Date</type>
</CustomField>