unpackaged/main/default/objects/Project_Backlog_Reporting_Snapshot__c/fields/Opportunity_PS_Sales_Territory_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_PS_Sales_Territory_Owner__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <label>Opportunity: PS Sales Territory Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>