unpackaged/main/default/objects/Project_Backlog_Reporting_Snapshot__c/fields/Opportunity_SOW_Status__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_SOW_Status__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <label>Opportunity: SOW Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>