unpackaged/main/default/objects/Project_Backlog_Reporting_Snapshot__c/fields/Opportunity_Traffix_Release_SO_s__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Traffix_Release_SO_s__c</fullName>
    <label>Opportunity: Traffix Release SO #'s</label>
    <length>255</length>
    <type>Text</type>
</CustomField>