unpackaged/main/default/objects/Project_Backlog_Reporting_Snapshot__c/fields/Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_ID__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <label>Project: ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>