unpackaged/main/default/objects/Project_Backlog_Reporting_Snapshot__c/fields/Project_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner_Name__c</fullName>
    <label>Project: Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>