unpackaged/main/default/objects/Project_Backlog_Reporting_Snapshot__c/fields/Project_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Project_Name__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <label>Project: Project Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>