unpackaged/main/default/objects/Project_Backlog_Reporting_Snapshot__c/fields/Project_Status_Notes__c.field-meta.xml
<CustomField>
    <fullName>Project_Status_Notes__c</fullName>
    <label>Project Status Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>