unpackaged/main/default/objects/Project_Backlog_Reporting_Snapshot__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <label>Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>