unpackaged/main/default/objects/Project_Backlog_Reporting_Snapshot__c/fields/Revenue_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Bookings__c</fullName>
    <label>Revenue Bookings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>