unpackaged/main/default/objects/Project_Backlog_Reporting_Snapshot__c/fields/Theater__c.field-meta.xml
<CustomField>
    <fullName>Theater__c</fullName>
    <label>Theater</label>
    <length>255</length>
    <type>Text</type>
</CustomField>