unpackaged/main/default/objects/Project_Backlog_Reporting_Snapshot__c/fields/Total_Accounting_Backlog__c.field-meta.xml
<CustomField>
    <fullName>Total_Accounting_Backlog__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <label>Total Accounting Backlog</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>