unpackaged/main/default/objects/Project_Backlog_Reporting_Snapshot__c/fields/Total_Billable_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Billable_Hours__c</fullName>
    <label>Total Billable Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>