unpackaged/main/default/objects/Project_Backlog_Reporting_Snapshot__c/fields/Total_Hours_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Remaining__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <label>Total Hours Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>