unpackaged/main/default/objects/Project_Backlog_Reporting_Snapshot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sales_Order_Number__c</columns>
    <columns>Theater__c</columns>
    <columns>Region__c</columns>
    <columns>Group__c</columns>
    <columns>Practice__c</columns>
    <columns>Project_Project_Name__c</columns>
    <columns>Opportunity_Close_Date__c</columns>
    <columns>Opportunity_PS_Sales_Territory_Owner__c</columns>
    <columns>Opportunity_SOW_Status__c</columns>
    <columns>Revenue_Bookings__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>